ingress/nginx-ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
spec:
  rules:
  - host: "35.247.247.59.nip.io"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /nifi/
        backend:
          service:
            name: nifi-nodeport-service
            port:
              number: 9080

      - pathType: ImplementationSpecific
        path: /nifi
        backend:
          service:
            name: nifi-nodeport-service
            port:
              number: 9080

      - path: /dumbworks/development/jupyter/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: proxy-public
            port:
              number: 80
